kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  namespace: OnlineEventBooking-SalehaIrum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking-pod
          image: salehaa/booking_service:1.0.0  
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: booking
  namespace: OnlineEventBooking-SalehaIrum
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 5000  # Container's port
  type: ClusterIP
