kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event-pod
          image: salehaa/event_service:1.0.0  
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: event
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 8080  # Container's port
  type: ClusterIP
