kubernetes/deployment-service-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-pod
          image: salehaa/frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 80  # Container's port
  type: ClusterIP
