kubernetes/deployment-service-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
            - name: mongo-init
              mountPath: /docker-entrypoint-initdb.d/init-mongo.js
              subPath: init-mongo.js
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
        - name: mongo-init
          configMap:
            name: mongo-init
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
