kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification-pod
          image: salehaa/notification_service:1.0.0  
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 5000  # Container's port
  type: ClusterIP
