kubernetes/deployment-service-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment-pod
          image: salehaa/payment_service
          imagePullPolicy: Always 
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 5005   # Exposed service port
      targetPort: 5000  # Container's port
  type: ClusterIP
