kubernetes/deployment-service-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: online-event-booking-saleha-irum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672  # RabbitMQ main port for messaging
            - containerPort: 15672 # Management UI port
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          emptyDir: {} # Data will be lost if the pod restarts (use PersistentVolume for persistence)
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: online-event-booking-saleha-irum
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672    # Messaging service port
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672   # Management UI port
      targetPort: 15672
  type: ClusterIP # Change to LoadBalancer if external access is needed
