kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: OnlineEventBooking-SalehaIrum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-pod
          image: salehaa/user_service:1.0.0  
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: OnlineEventBooking-SalehaIrum
spec:
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 80   # Exposed service port
      targetPort: 8000  # Container's port
  type: ClusterIP
